--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,7 +3,7 @@
 ::after {
     margin: 0;
     padding: 0;
-    box-sizing: inherit; }
+}
 
 
 html {
@@ -25,11 +25,7 @@ html {
 }
 
 body {
-    box-sizing: border-box;
-    padding: 3rem;
-
-    @include respond(tablet) {
-      padding: 0;
-    }
+    margin: 0;
+    padding: 0;
 }
 
