--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,45 +1,42 @@
-.card {
+.photos {
+    column-count: 5;
+    column-gap: 0px;
 
-    // functionality //
-    perspective: 150rem;
-    position: relative;
-    height: 50rem;
-    
-    &__side {
-        height: 50rem;
-        transition: all .8s ease;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        backface-visibility: hidden;
-        border-radius: 3px;
-        overflow: hidden;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+    &__cards {
+        perspective: 150rem;
+
+        &:hover &--side,
+        &.hover &--side {
+            transform: rotateY(180deg);
+        }
+
+        &--side {
+            transition: all .8s ease;
+            transform-style: preserve-3d;
+            position: relative;
+        }
 
         &--front {
-            background-color: $color-white;
+            z-index: 2;
+            transform: rotateY(0deg);
+            line-height: 0;
+            backface-visibility: hidden;
         }
 
         &--back {
             transform: rotateY(180deg);
-            background: $color-grey-light-1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: $color-grey-light-2;
             color: $color-black;
             padding: 5rem;
+            backface-visibility: hidden;
         }
-    }
-
-    &:hover &__side--front {
-        transform: rotateY(-180deg);
-    }
-
-    &:hover &__side--back {
-        transform: rotateY(0);
-    }
-
-    // front side styling //
-    &__picture {
-        width: 100%;
     }
 }
 
+img {
+    width: 100% !important;
+    height: auto !important;
+}
