--- a/sass/main.css
+++ b/sass/main.css
@@ -1,12 +1,4 @@
 /*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
-/*
 0-600px		Phone
 600-900px	Tablet
 900-1200px	Netbook
@@ -26,8 +18,6 @@ $breakpoint ARGUMENTS
 ::after {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
 }
 
 html {
@@ -53,15 +43,8 @@ html {
 }
 
 body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 3rem;
-}
-
-@media (max-width: 56.25em) {
-  body {
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -91,126 +74,61 @@ body {
   text-transform: lowercase;
 }
 
-.card {
-  -webkit-perspective: 150rem;
-          perspective: 150rem;
-  position: relative;
-  height: 50rem;
+h4 {
+  padding-bottom: 1rem;
 }
 
-.card__side {
-  height: 50rem;
+.photos {
+  -webkit-column-count: 5;
+          column-count: 5;
+  -webkit-column-gap: 0px;
+          column-gap: 0px;
+}
+
+.photos__cards {
+  -webkit-perspective: 150rem;
+          perspective: 150rem;
+}
+
+.photos__cards:hover .photos__cards--side,
+.photos__cards.hover .photos__cards--side {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.photos__cards--side {
   -webkit-transition: all .8s ease;
   transition: all .8s ease;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  position: relative;
+}
+
+.photos__cards--front {
+  z-index: 2;
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+  line-height: 0;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.photos__cards--back {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  border-radius: 3px;
-  overflow: hidden;
-  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-          box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-}
-
-.card__side--front {
-  background-color: #fff;
-}
-
-.card__side--back {
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
-  background: #f7f7f7;
+  background-color: #eee;
   color: #000;
   padding: 5rem;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
-.card:hover .card__side--front {
-  -webkit-transform: rotateY(-180deg);
-          transform: rotateY(-180deg);
-}
-
-.card:hover .card__side--back {
-  -webkit-transform: rotateY(0);
-          transform: rotateY(0);
-}
-
-.card__picture {
-  width: 100%;
-}
-
-.row {
-  max-width: 114rem;
-  margin: 0 auto;
-}
-
-.row:not(:last-child) {
-  margin-bottom: 8rem;
-}
-
-@media (max-width: 56.25em) {
-  .row:not(:last-child) {
-    margin-bottom: 6rem;
-  }
-}
-
-@media (max-width: 56.25em) {
-  .row {
-    max-width: 50rem;
-    padding: 0 3rem;
-  }
-}
-
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.row [class^="col-"] {
-  float: left;
-}
-
-.row [class^="col-"]:not(:last-child) {
-  margin-right: 6rem;
-}
-
-@media (max-width: 56.25em) {
-  .row [class^="col-"]:not(:last-child) {
-    margin-right: 0;
-    margin-bottom: 6rem;
-  }
-}
-
-@media (max-width: 56.25em) {
-  .row [class^="col-"] {
-    width: 100% !important;
-  }
-}
-
-.row .col-1-of-2 {
-  width: calc((100% - 6rem) / 2);
-}
-
-.row .col-1-of-3 {
-  width: calc((100% - 2 * 6rem) / 3);
-}
-
-.row .col-2-of-3 {
-  width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem);
-}
-
-.row .col-1-of-4 {
-  width: calc((100% - 3 * 6rem) / 4);
-}
-
-.row .col-2-of-4 {
-  width: calc( 2 *((100% - 3 * 6rem) / 4) + 6rem);
-}
-
-.row .col-3-of-4 {
-  width: calc( 3 *((100% - 3 * 6rem) / 4) + 2 * 6rem);
+img {
+  width: 100% !important;
+  height: auto !important;
 }
 
 .header__textBox {
