Added fixed-position button, background, and navigation. Added About item. Lorem ipsum text is for testing purposes only.

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,10 +1,12 @@
 // colors
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+$color-primary: #cc66ff;
+$color-primary-light: #d9f;
+$color-primary-dark: #a0f;
 
 $color-secondary-light: #ffb900;
+$color-secondary-light-2: #ffdd80;
 $color-secondary-dark: #ff7730;
+$color-secondary-dark-2: #ffac80;
 
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
