--- a/sass/main.css
+++ b/sass/main.css
@@ -78,6 +78,133 @@ h4 {
   padding-bottom: 1rem;
 }
 
+.about {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 3000;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all .8s;
+  transition: all .8s;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+
+.about__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 50%;
+  margin: 0 auto;
+  -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
+          box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
+  background: url(/img/candle-small.jpg) #fff;
+  background-size: 100%;
+  background-position: bottom;
+  border-radius: 3px;
+  font-size: 1.6rem;
+  overflow: hidden;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.about__text {
+  background-color: transparent;
+  color: #eee;
+  width: 25%;
+  font-size: 1.4rem;
+  text-align: left;
+  padding: 10rem;
+  position: relative;
+  left: 50%;
+}
+
+.about:target {
+  opacity: 1;
+  visibility: visible;
+}
+
+.about:target .about__content {
+  opacity: 1;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+}
+
+.about__close:link, .about__close:visited {
+  color: #999;
+  position: absolute;
+  top: 1.5rem;
+  right: 2.5rem;
+  font-size: 4rem;
+  text-decoration: none;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  line-height: 1;
+  z-index: 3001;
+}
+
+.about__close:hover {
+  color: #ff7730;
+  cursor: pointer;
+}
+
+.about__link:link, .about__link:visited {
+  color: #999;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.about__link:hover, .about__link:active {
+  color: #ff7730;
+  cursor: pointer;
+}
+
+.button, .button:link, .button:visited {
+  background-color: rgba(0, 0, 0, 0.1);
+  font-size: 2rem;
+  -webkit-box-shadow: inset 0.3rem 0.3rem 0.5rem #fff, 0.7rem 0.7rem 0.5rem rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0.3rem 0.3rem 0.5rem #fff, 0.7rem 0.7rem 0.5rem rgba(0, 0, 0, 0.5);
+  -webkit-transition: all;
+  transition: all;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 1rem 2rem;
+  display: inline-block;
+  border-radius: 7rem;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  font-size: 1.6rem;
+  color: #333;
+  border: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #000;
+  -webkit-box-shadow: inset 0.2rem 0.2rem 0.5rem #fff, 0.7rem 0.7rem 0.5rem rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0.2rem 0.2rem 0.5rem #fff, 0.7rem 0.7rem 0.5rem rgba(0, 0, 0, 0.5);
+}
+
+.button:active {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #000;
+  -webkit-box-shadow: inset 0.4rem 0.4rem 0.9rem rgba(0, 0, 0, 0.8);
+          box-shadow: inset 0.4rem 0.4rem 0.9rem rgba(0, 0, 0, 0.8);
+}
+
 .photos {
   -webkit-column-count: 5;
           column-count: 5;
@@ -133,5 +260,107 @@ img {
 
 .header__textBox {
   text-align: center;
+}
+
+.navigation {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.navigation__checkbox {
+  display: none;
+}
+
+.navigation__button {
+  background-color: #fff;
+  height: 6rem;
+  width: 6rem;
+  border-radius: 3%;
+  position: fixed;
+  top: 5rem;
+  right: 5rem;
+  z-index: 2000;
+  -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+.navigation__background {
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 6.5rem;
+  right: 6.5rem;
+  background-image: radial-gradient(#ffb900, #f7f7f7);
+  z-index: 1000;
+  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.navigation__nav {
+  height: 100vh;
+  width: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1500;
+  opacity: 0;
+  -webkit-transition: all .8s;
+  transition: all .8s;
+}
+
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: left;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.navigation__item {
+  margin: 1rem;
+}
+
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  font-size: 3rem;
+  font-weight: 300;
+  color: #333;
+  text-decoration: none;
+  text-transform: uppercase;
+  -webkit-transition: all .4s;
+  transition: all .4s;
+}
+
+.navigation__link:hover, .navigation__link:active {
+  font-weight: 400;
+  color: #fff;
+  cursor: pointer;
+}
+
+.navigation__checkbox:checked ~ .navigation__background {
+  -webkit-transform: scale(80);
+          transform: scale(80);
+}
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100%;
+}
+
+.navigation__icon {
+  display: inline-block;
+  z-index: 2500;
 }
 /*# sourceMappingURL=main.css.map */
