--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,7 +11,7 @@ body {
         display: block;
         font-size: 6rem;
         font-weight: 400;
-        letter-spacing: 2rem;
+        letter-spacing: 1rem;
         color: $color-grey-dark-3;
         text-transform: uppercase;
     }
@@ -25,6 +25,12 @@ body {
         color: $color-grey-dark-2;
         text-transform: lowercase;
     }
+}
+
+.secondaryHeading {
+    padding: 0 0 2rem;
+    text-align: left;
+    color: $color-grey-light-1;
 }
 
 h4 {
