--- a/sass/main.css
+++ b/sass/main.css
@@ -59,7 +59,7 @@ body {
   display: block;
   font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 2rem;
+  letter-spacing: 1rem;
   color: #333;
   text-transform: uppercase;
 }
@@ -72,6 +72,12 @@ body {
   letter-spacing: 1rem;
   color: #999;
   text-transform: lowercase;
+}
+
+.secondaryHeading {
+  padding: 0 0 2rem;
+  text-align: left;
+  color: #f7f7f7;
 }
 
 h4 {
@@ -256,6 +262,152 @@ h4 {
 img {
   width: 100% !important;
   height: auto !important;
+}
+
+.form {
+  width: 100%;
+}
+
+.form__group {
+  margin-bottom: 2rem;
+}
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  color: #333;
+  padding: 1rem;
+  width: 55%;
+  border-radius: 2px;
+  background-color: #f7f7f7;
+  border: none;
+  border-bottom: 3px solid transparent;
+  display: block;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.form__input:focus {
+  outline: none;
+  border-bottom: 3px solid #ffb900;
+}
+
+.form__input:focus:invalid {
+  border-bottom: 3px solid #ff7730;
+}
+
+.form__input::-webkit-input-placeholder {
+  color: #999;
+}
+
+.form__label {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-top: .7rem;
+  display: block;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(-4rem);
+          transform: translateY(-4rem);
+}
+
+.share {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 3000;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all .8s;
+  transition: all .8s;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+
+.share__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 75%;
+  margin: 0 auto;
+  -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
+          box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
+  background: url(/img/candle-small.jpg) #fff;
+  background-size: 100%;
+  background-position: bottom;
+  border-radius: 3px;
+  font-size: 1.6rem;
+  overflow: hidden;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.share__form {
+  width: 60%;
+  position: relative;
+  top: 5rem;
+  left: 60rem;
+}
+
+.share:target {
+  opacity: 1;
+  visibility: visible;
+}
+
+.share:target .share__content {
+  opacity: 1;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+}
+
+.share__close:link, .share__close:visited {
+  color: #999;
+  position: absolute;
+  top: 1.5rem;
+  right: 2.5rem;
+  font-size: 4rem;
+  text-decoration: none;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  line-height: 1;
+  z-index: 3001;
+}
+
+.share__close:hover {
+  color: #ff7730;
+  cursor: pointer;
+}
+
+.share__link:link, .share__link:visited {
+  color: #999;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.share__link:hover, .share__link:active {
+  color: #ff7730;
+  cursor: pointer;
+}
+
+.header {
+  padding: 15rem 0 5rem;
 }
 
 .header__textBox {
