--- a/sass/components/_share.scss
+++ b/sass/components/_share.scss
@@ -18,7 +18,7 @@
         margin: 0 auto;
         box-shadow: 0 2rem 4rem rgba($color-black, .7);
         background: url(/img/candle-small.jpg) $color-white;
-        background-size: 100%;
+        background-size: cover;
         background-position: bottom;
         border-radius: 3px;
         font-size: $default-font-size;
@@ -29,10 +29,8 @@
     }
 
     &__form {
-        width: 60%;
-        position: relative;
-        top: 5rem;
-        left: 60rem;
+        width: 70%;
+        
     }
 
     //OPEN STATES
