Added JavaScript files, created references in HTML. Aligned the form and inputs.

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,9 +28,9 @@ body {
 }
 
 .secondaryHeading {
-    padding: 0 0 5rem;
-    text-align: left;
-    color: $color-grey-light-1;
+    padding: 5rem 0;
+    text-align: center;
+    color: $color-secondary-light-2;
 }
 
 h4 {
