--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,14 +1,12 @@
 .form {
-
-
     width: 100%;
-
 
     &__group {
         margin-bottom: 2rem;
         display: inline-block;
         width: 100%;
         line-height: 0;
+        direction: rtl;
     }
 
     &__input {
@@ -16,13 +14,14 @@
         font-family: inherit;
         color: $color-grey-dark-3;
         padding: 1rem;
-        width: 55%;
+        width: 45%;
         border-radius: 2px;
         background-color: $color-grey-light-1;
         border: none;
         border-bottom: 3px solid transparent;
         display: block;
         transition: all .3s;
+        direction: ltr;
 
         &:focus {
             outline: none;
@@ -41,9 +40,10 @@
     &__label {
         font-size: 2rem;
         font-weight: 700;
-        margin-top: .7rem;
+        margin-top: 1rem;
         display: block;
         transition: all .3s;
+
     }
 
     &__input:placeholder-shown + &__label {
@@ -63,7 +63,7 @@
             top: 0;
             right: 0;
             display: inline-block;
-            height: 60px;
+            height: 6rem;
             background: $color-grey-light-1;
             color: $color-grey-dark-3;
             font-weight: 700;
