--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -4,11 +4,13 @@
     left: 0;
     height: 100vh;
     width: 100%;
+    background-color: rgba($color-black, .3);
     z-index: 3000;
     opacity: 0;
     visibility: hidden;
     transition: all .8s;
     backdrop-filter: blur(10px);
+    
 
     &__content {
         @include center;
