--- a/sass/main.css
+++ b/sass/main.css
@@ -83,6 +83,7 @@ h4 {
   left: 0;
   height: 100vh;
   width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: 3000;
   opacity: 0;
   visibility: hidden;
