--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -54,28 +54,9 @@
 
     &__upload--wrapper {
         position: relative;
-        width: 55%;
+        width: 45%;
         height: 6rem;
-
-        &:before {
-            content: 'Upload';
-            position: absolute;
-            top: 0;
-            right: 0;
-            display: inline-block;
-            height: 6rem;
-            background: $color-grey-light-1;
-            color: $color-grey-dark-3;
-            font-weight: 700;
-            z-index: 1501;
-            font-size: 2rem;
-            line-height: 6rem;
-            padding: 0 1.5rem;
-            text-transform: uppercase;
-            pointer-events: none;
-            border-radius: 0 5px 5px 0;
-        }
-    }
+        direction: ltr;
 
         &:after {
             content: attr(data-text);
@@ -96,28 +77,70 @@
             font-weight: 300;
         }
 
+        &:before {
+            content: 'Upload';
+            position: absolute;
+            top: 0;
+            right: 0;
+            display: inline-block;
+            height: 6rem;
+            background: $color-secondary-light-2;
+            color: $color-grey-dark-3;
+            font-weight: 700;
+            z-index: 1502;
+            font-size: 2rem;
+            line-height: 6rem;
+            padding: 0 1.5rem;
+            text-transform: uppercase;
+            pointer-events: none;
+            border-radius: 0 5px 5px 0;
+        }
+
+
         &:hover {
             &:before {
               background: $color-secondary-dark;
             }
-          }
-           input {
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            z-index: 1502;
-            height: 4rem;
-            margin: 0;
-            padding: 0;
-            display: block;
+        }
+    }    
+
+    &__link {
+        padding: 2rem 0;
+
+        &:link,
+        &:visited {
+            color: $color-grey-dark-2;
+            text-decoration: none;
+            text-transform: uppercase;
+            display: inline-block;
+            transition: all .2s;
+            
+        }
+    
+        &:hover,
+        &:active {
+            color: $color-secondary-dark;
             cursor: pointer;
-            width: 100%;
-          }
+        }
+    }
 }
 
 #form__group {
     padding-bottom: 8px;
 }
+
+input .file-upload-field {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1600;
+    height: 4rem;
+    margin: 0;
+    padding: 0;
+    display: block;
+    cursor: pointer;
+    width: 100%;
+  }
