--- a/sass/main.css
+++ b/sass/main.css
@@ -317,30 +317,12 @@ img {
 
 .form__upload--wrapper {
   position: relative;
-  width: 55%;
+  width: 45%;
   height: 6rem;
+  direction: ltr;
 }
 
-.form__upload--wrapper:before {
-  content: 'Upload';
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: inline-block;
-  height: 6rem;
-  background: #f7f7f7;
-  color: #333;
-  font-weight: 700;
-  z-index: 1501;
-  font-size: 2rem;
-  line-height: 6rem;
-  padding: 0 1.5rem;
-  text-transform: uppercase;
-  pointer-events: none;
-  border-radius: 0 5px 5px 0;
-}
-
-.form:after {
+.form__upload--wrapper:after {
   content: attr(data-text);
   font-size: 2rem;
   position: absolute;
@@ -359,28 +341,65 @@ img {
   font-weight: 300;
 }
 
-.form:hover:before {
+.form__upload--wrapper:before {
+  content: 'Upload';
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  height: 6rem;
+  background: #ffdd80;
+  color: #333;
+  font-weight: 700;
+  z-index: 1502;
+  font-size: 2rem;
+  line-height: 6rem;
+  padding: 0 1.5rem;
+  text-transform: uppercase;
+  pointer-events: none;
+  border-radius: 0 5px 5px 0;
+}
+
+.form__upload--wrapper:hover:before {
   background: #ff7730;
 }
 
-.form input {
+.form__link {
+  padding: 2rem 0;
+}
+
+.form__link:link, .form__link:visited {
+  color: #999;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.form__link:hover, .form__link:active {
+  color: #ff7730;
+  cursor: pointer;
+}
+
+#form__group {
+  padding-bottom: 8px;
+}
+
+input .file-upload-field {
   opacity: 0;
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1502;
+  z-index: 1600;
   height: 4rem;
   margin: 0;
   padding: 0;
   display: block;
   cursor: pointer;
   width: 100%;
-}
-
-#form__group {
-  padding-bottom: 8px;
 }
 
 .share {
@@ -454,20 +473,6 @@ img {
 }
 
 .share__close:hover {
-  color: #ff7730;
-  cursor: pointer;
-}
-
-.share__link:link, .share__link:visited {
-  color: #999;
-  text-decoration: none;
-  text-transform: uppercase;
-  display: inline-block;
-  -webkit-transition: all .2s;
-  transition: all .2s;
-}
-
-.share__link:hover, .share__link:active {
   color: #ff7730;
   cursor: pointer;
 }
