--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -17,7 +17,7 @@
         margin: 0 auto;
         box-shadow: 0 2rem 4rem rgba($color-black, .7);
         background: url(/img/candle-small.jpg) $color-white;
-        background-size: 100%;
+        background-size: cover;
         background-position: bottom;
         border-radius: 3px;
         font-size: $default-font-size;
