--- a/sass/main.css
+++ b/sass/main.css
@@ -104,7 +104,7 @@ h4 {
   -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
           box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
   background: url(/img/candle-small.jpg) #fff;
-  background-size: 100%;
+  background-size: cover;
   background-position: bottom;
   border-radius: 3px;
   font-size: 1.6rem;
@@ -285,7 +285,7 @@ img {
   -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
           box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
   background: url(/img/candle-small.jpg) #fff;
-  background-size: 100%;
+  background-size: cover;
   background-position: bottom;
   border-radius: 3px;
   font-size: 1.6rem;
@@ -354,6 +354,7 @@ img {
 
 .form {
   width: 100%;
+  padding-right: 5rem;
 }
 
 .form__group {
@@ -458,6 +459,10 @@ img {
   background: #ff7730;
 }
 
+.form__next {
+  text-align: center;
+}
+
 .form__link {
   padding: 2rem 0;
 }
@@ -474,10 +479,6 @@ img {
 .form__link:hover, .form__link:active {
   color: #ff7730;
   cursor: pointer;
-}
-
-#form__group {
-  padding-bottom: 8px;
 }
 
 input .file-upload-field {
@@ -522,7 +523,7 @@ input .file-upload-field {
   margin: 0 auto;
   -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
           box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
-  background: url(/img/candle-small.jpg) #fff;
+  background: url(/img/candle-small.jpg), rgba(0, 0, 0, 0.4);
   background-size: cover;
   background-position: bottom;
   border-radius: 3px;
