--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,9 +1,29 @@
+
+/* COUNTRY SELECTION DROPDOWN */
+
+select {
+    appearance: none;
+    border: none;
+    padding: 1rem;
+}
+
+select:required:invalid {
+    color: $color-grey-dark-2;
+}
+
+option[value=""][disabled] {
+    display: none;
+}
+
+option {
+    color: $color-grey-dark-3;
+}
+
+/* FORM */
+
 .form {
     width: 100%;
-    
     padding-right: 5rem;
-
-    
 
     &__group {        
         margin-bottom: 2rem;
@@ -11,8 +31,6 @@
         width: 100%;
         line-height: 0;
         direction: rtl;    
-      
-
     }
 
     &__input {
@@ -49,7 +67,6 @@
         margin-top: 1rem;
         display: block;
         transition: all .3s;
-
     }
 
     &__input:placeholder-shown + &__label {
@@ -58,58 +75,6 @@
         transform: translateY(-4rem);
     }
 
-    &__upload--wrapper {
-        position: relative;
-        width: 45%;
-        height: 6rem;
-        direction: ltr;
-
-        &:after {
-            content: attr(data-text);
-            font-size: 2rem;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: $color-grey-light-1;
-            padding: 1rem 1.5rem;
-            display: block;
-            width: calc(100% - 4rem);
-            pointer-events: none;
-            z-index: 1501;
-            height: 4rem;
-            line-height: 4rem;
-            color: $color-grey-dark-2;
-            border-radius: 5px 10px 10px 5px;
-            font-weight: 300;
-        }
-
-        &:before {
-            content: 'Upload';
-            position: absolute;
-            top: 0;
-            right: 0;
-            display: inline-block;
-            height: 6rem;
-            background: $color-secondary-light-2;
-            color: $color-grey-dark-3;
-            font-weight: 700;
-            z-index: 1502;
-            font-size: 2rem;
-            line-height: 6rem;
-            padding: 0 1.5rem;
-            text-transform: uppercase;
-            pointer-events: none;
-            border-radius: 0 5px 5px 0;
-        }
-
-
-        &:hover {
-            &:before {
-              background: $color-secondary-dark;
-            }
-        }
-    }
-    
     &__next {
         text-align: center;
     }
@@ -124,7 +89,6 @@
             text-transform: uppercase;
             display: inline-block;
             transition: all .2s;
-            
         }
     
         &:hover,
@@ -134,19 +98,3 @@
         }
     }
 }
-
-input .file-upload-field {
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1600;
-    height: 4rem;
-    margin: 0;
-    padding: 0;
-    display: block;
-    cursor: pointer;
-    width: 100%;
-  }
