--- a/sass/main.css
+++ b/sass/main.css
@@ -352,17 +352,39 @@ img {
   cursor: pointer;
 }
 
+/* COUNTRY SELECTION DROPDOWN */
+select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+  padding: 1rem;
+}
+
+select:required:invalid {
+  color: #999;
+}
+
+option[value=""][disabled] {
+  display: none;
+}
+
+option {
+  color: #333;
+}
+
+/* FORM */
 .form {
   width: 100%;
   padding-right: 5rem;
 }
 
 .form__group {
+  margin-bottom: 2rem;
   display: inline-block;
   width: 100%;
   line-height: 0;
   direction: rtl;
-  margin-bottom: 2rem;
 }
 
 .form__input {
@@ -410,55 +432,6 @@ img {
           transform: translateY(-4rem);
 }
 
-.form__upload--wrapper {
-  position: relative;
-  width: 45%;
-  height: 6rem;
-  direction: ltr;
-}
-
-.form__upload--wrapper:after {
-  content: attr(data-text);
-  font-size: 2rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: #f7f7f7;
-  padding: 1rem 1.5rem;
-  display: block;
-  width: calc(100% - 4rem);
-  pointer-events: none;
-  z-index: 1501;
-  height: 4rem;
-  line-height: 4rem;
-  color: #999;
-  border-radius: 5px 10px 10px 5px;
-  font-weight: 300;
-}
-
-.form__upload--wrapper:before {
-  content: 'Upload';
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: inline-block;
-  height: 6rem;
-  background: #ffdd80;
-  color: #333;
-  font-weight: 700;
-  z-index: 1502;
-  font-size: 2rem;
-  line-height: 6rem;
-  padding: 0 1.5rem;
-  text-transform: uppercase;
-  pointer-events: none;
-  border-radius: 0 5px 5px 0;
-}
-
-.form__upload--wrapper:hover:before {
-  background: #ff7730;
-}
-
 .form__next {
   text-align: center;
 }
@@ -479,22 +452,6 @@ img {
 .form__link:hover, .form__link:active {
   color: #ff7730;
   cursor: pointer;
-}
-
-input .file-upload-field {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1600;
-  height: 4rem;
-  margin: 0;
-  padding: 0;
-  display: block;
-  cursor: pointer;
-  width: 100%;
 }
 
 .share {
