First page of submission form

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,8 +28,8 @@ body {
 }
 
 .secondaryHeading {
-    padding: 5rem 0;
-    text-align: center;
+    padding: 5rem;
+    text-align: left;
     color: $color-secondary-light-2;
 }
 
