--- a/sass/components/_share.scss
+++ b/sass/components/_share.scss
@@ -17,7 +17,7 @@
         width: 75%;
         margin: 0 auto;
         box-shadow: 0 2rem 4rem rgba($color-black, .7);
-        background: url(/img/candle-small.jpg), rgba($color-black, .4);
+        background: url(/img/candle-small-flip.jpg), rgba($color-black, .4);
         background-size: cover;
         background-position: bottom;
         border-radius: 3px;
@@ -26,11 +26,6 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(0);
         transition: all .5s;
-    }
-
-    &__form {
-        display: inline-block;
-        padding-right: 5rem;
     }
 
     //OPEN STATES
