--- a/sass/components - Copy/_cards.scss
+++ b/sass/components - Copy/_cards.scss
@@ -3,27 +3,27 @@
     column-gap: 0px;
 
     &__cards {
-
-        perspective: 1500rem;
+        perspective: 150rem;
+        width: 100%;
         position: relative;
-        line-height: 0;
 
         &--side.flipped {
             transform: rotateY(-180deg);
         }
 
         &--side {
-
+            height: 100%;
             transform-style: preserve-3d;
             transition: .5s;
         }
 
-    &__face {
-
-        position: absolute;
-        backface-visibility: hidden;
-        z-index: 2;
-    }
+        &--front,
+        &--back {
+            width: 100%;
+            position: absolute;
+            backface-visibility: hidden;
+            z-index: 2;
+        }
 
         &--front {
             z-index: 1;
