--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -3,38 +3,33 @@
     column-gap: 0px;
 
     &__cards {
+        perspective: 150rem;
 
-        perspective: 1500rem;
-        position: relative;
-        line-height: 0;
-
-        &--side.flipped {
-            transform: rotateY(-180deg);
+        &:hover &--side,
+        &.hover &--side {
+            transform: rotateY(180deg);
         }
 
         &--side {
-
+            transition: all .8s ease;
             transform-style: preserve-3d;
-            transition: .5s;
+            position: relative;
         }
 
-    &__face {
-
-        position: absolute;
-        backface-visibility: hidden;
-        z-index: 2;
-    }
-
         &--front {
-            z-index: 1;
-            
+            z-index: 2;
+            transform: rotateY(0deg);
+            line-height: 0;
+            backface-visibility: hidden;
         }
 
         &--back {
-            transform: rotateY(-180deg);
+            transform: rotateY(180deg);
+            position: absolute;
+            top: 0;
+            left: 0;
             background-color: $color-grey-light-2;
             color: $color-black;
-            padding: 5rem;
             backface-visibility: hidden;
         }
     }
