Determined height of card backs, allowed scrolling

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -28,9 +28,12 @@
             position: absolute;
             top: 0;
             left: 0;
+            bottom: 0;
+            height: 100%;
             background-color: $color-grey-light-2;
             color: $color-black;
             backface-visibility: hidden;
+            overflow-y: auto;
         }
     }
 }
