Added numbered classes to columns

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     padding: 0;
 
-    &__cards {
+    &__column {
         flex: 20%;
         max-width: 20%;
         padding: 0;
