--- a/sass/components/_photos.scss
+++ b/sass/components/_photos.scss
@@ -11,9 +11,9 @@
 
     &__wrapper {
         position: relative;
+        display: flex;
     }
 
-    &__wrapper, .photos__memory:focus,
     &__wrapper:hover .photos__memory {
         opacity: 1;
         cursor: pointer;
@@ -30,6 +30,7 @@
         opacity: 0;
         cursor: none;
         transition: all .3s;
+        display: flex;
 
         &:link,
         &:focus,
@@ -40,6 +41,7 @@
 
     &__details {
         margin: 1.5rem;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -50,12 +52,13 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: baseline;
-        font-size: 2rem;
         color: $color-grey-light-1;
         text-transform: uppercase;
 
         & h4 {
             padding: 0;
+            font-size: 2rem;
+
         }
     }
 
