--- a/sass/components/_memories.scss
+++ b/sass/components/_memories.scss
@@ -5,7 +5,6 @@
     height: 100vh;
     width: 100%;
     background-color: rgba($color-black, .3);
-
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
@@ -17,7 +16,7 @@
         height: 80%;
         width: 25%;
         box-shadow: 0 2rem 4rem rgba($color-black, .6);
-        overflow: hidden;
+        
         opacity: 0;
         transform: translate(-50%, -50%) scale(0);
         transition: all .5s;
@@ -33,7 +32,7 @@
         &-text {
             width: 100%;
             height: 100%;
-            background-color: rgba($color-black, .6);
+            background-color: rgba($color-grey-dark-3, .8);
             position: relative;
 
             p {
@@ -45,6 +44,8 @@
                 padding: 0;
                 color: $color-grey-light-2;
                 text-align: justify;
+                line-height: 1.3;
+
             }
         }
     }
@@ -78,6 +79,7 @@
             display: inline-block;
             transition: all .2s;
             line-height: 1;
+            z-index: 3001;
         }
 
         &:hover {
