--- a/sass/main.css
+++ b/sass/main.css
@@ -432,7 +432,6 @@ form {
   width: 25%;
   -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.6);
           box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.6);
-  overflow: hidden;
   opacity: 0;
   -webkit-transform: translate(-50%, -50%) scale(0);
           transform: translate(-50%, -50%) scale(0);
@@ -449,7 +448,7 @@ form {
 .dario__memory-text {
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(51, 51, 51, 0.8);
   position: relative;
 }
 
@@ -463,6 +462,7 @@ form {
   padding: 0;
   color: #eee;
   text-align: justify;
+  line-height: 1.3;
 }
 
 .dario:target {
@@ -487,6 +487,7 @@ form {
   -webkit-transition: all .2s;
   transition: all .2s;
   line-height: 1;
+  z-index: 3001;
 }
 
 .dario__close:hover {
