--- a/sass/components/_photos.scss
+++ b/sass/components/_photos.scss
@@ -49,7 +49,7 @@
 
     &__name-date {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
         align-items: baseline;
         color: $color-grey-light-1;
@@ -59,6 +59,13 @@
             padding: 0;
             font-size: 2rem;
         }
+    }
+
+    &__demo {
+        text-transform: uppercase;
+        color: $color-secondary-light-2;
+        text-align: justify;
+        font-size: 1.3rem;
     }
 
     &__read-more {
