--- a/sass/components/_memories.scss
+++ b/sass/components/_memories.scss
@@ -10,12 +10,13 @@
     transition: all .3s;
     backdrop-filter: blur(10px);
 
-    &__dario {
+    &__lovedOne {
         @include center;
         margin: 0 auto;
         height: 80%;
         width: 25%;
         box-shadow: 0 4rem 2rem rgba($color-black, .8);
+        overflow: hidden;
         opacity: 0;
         transform: translate(-50%, -50%) scale(0);
         transition: all .5s;
@@ -25,12 +26,11 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
-        overflow: hidden;
 
-    &__text {
+        &-text {
         width: 100%;
         height: 100%;
-        background-color: rgba($color-grey-dark-3, .8);
+        background-color: rgba($color-black, .6);
         position: relative;
 
         p {
@@ -56,7 +56,7 @@
         visibility: visible;
     }
 
-    &:target &__dario {
+    &:target &__lovedOne {
         opacity: 1;
         transform: translate(-50%, -50%) scale(1);
     }
