Completed the Robinsons

--- a/sass/components/_memories.scss
+++ b/sass/components/_memories.scss
@@ -64,6 +64,13 @@
         background-repeat: no-repeat;
         background-position: center;
     }
+
+    &__juanitaRobinson {
+        background-image: url(/img/juanita-robinson-and-howard-robinson.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
     
         //OPEN STATES
 
