Completed all photos

--- a/sass/components/_memories.scss
+++ b/sass/components/_memories.scss
@@ -71,6 +71,48 @@
         background-repeat: no-repeat;
         background-position: center;
     }
+
+    &__margaretShea {
+        background-image: url(/img/margaret-shea.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+
+    &__susanFarrell {
+        background-image: url(/img/Susan-Farrell.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    &__rebeccaMack {
+        background-image: url(/img/Rebecca-Mack.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    &__arleneReid {
+        background-image: url(/img/arlene-reid.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    &__bellyMujinga {
+        background-image: url(/img/Belly-Mujinga.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    &__joeMattern {
+        background-image: url(/img/Joe-Mattern.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
     
         //OPEN STATES
 
