--- a/sass/components/_share.scss
+++ b/sass/components/_share.scss
@@ -28,6 +28,12 @@
         transition: all .5s;
     }
 
+    &__content > h2 {
+        color: #333 !important;
+    }
+
+    
+
     //OPEN STATES
 
     &:target {
