--- a/sass/main.css
+++ b/sass/main.css
@@ -204,6 +204,37 @@ p {
           box-shadow: inset 0.4rem 0.4rem 0.9rem rgba(0, 0, 0, 0.8);
 }
 
+.construction {
+  width: 55%;
+  text-align: center;
+}
+
+.construction__header {
+  letter-spacing: 1rem;
+  font-size: 3rem;
+  color: #ffdd80 !important;
+  padding: 2rem;
+}
+
+.construction__text {
+  color: #eee;
+  font-size: 2rem;
+  padding-bottom: 4rem;
+}
+
+.construction__link:link, .construction__link:visited {
+  text-decoration: none;
+  color: #ffdd80;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.construction__link:hover, .construction__link:active {
+  color: #ff7730;
+  cursor: pointer;
+}
+
 .contact {
   position: fixed;
   top: 0;
@@ -247,7 +278,7 @@ p {
   background-color: transparent;
   color: #eee;
   width: 25%;
-  font-size: 1.6rem;
+  font-size: 2rem;
   text-align: left;
   padding: 10rem;
   position: relative;
@@ -294,6 +325,75 @@ p {
 }
 
 .contact__link:hover, .contact__link:active {
+  color: #ff7730;
+  cursor: pointer;
+}
+
+.credits {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 3000;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all .8s;
+  transition: all .8s;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+
+.credits__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 70%;
+  margin: 0 auto;
+  -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
+          box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.7);
+  background: url(/img/candle-small.jpg) #fff;
+  background-size: cover;
+  background-position: bottom;
+  border-radius: 3px;
+  font-size: 1.6rem;
+  overflow: hidden;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.credits:target {
+  opacity: 1;
+  visibility: visible;
+}
+
+.credits:target .credits__content {
+  opacity: 1;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+}
+
+.credits__close:link, .credits__close:visited {
+  color: #999;
+  position: absolute;
+  top: 1.5rem;
+  right: 2.5rem;
+  font-size: 4rem;
+  text-decoration: none;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  line-height: 1;
+  z-index: 3001;
+}
+
+.credits__close:hover {
   color: #ff7730;
   cursor: pointer;
 }
@@ -707,6 +807,10 @@ img {
           transform: translate(-50%, -50%) scale(0);
   -webkit-transition: all .5s;
   transition: all .5s;
+}
+
+.share__content > h2 {
+  color: #333 !important;
 }
 
 .share:target {
