--- a/sass/components/_share.scss
+++ b/sass/components/_share.scss
@@ -17,7 +17,7 @@
         width: 75%;
         margin: 0 auto;
         box-shadow: 0 2rem 4rem rgba($color-black, .7);
-        background: url(/img/candle-small-flip.jpg), rgba($color-black, .4);
+        /* background: url(/img/candle-small-flip.jpg), rgba($color-black, .4); */
         background-size: cover;
         background-position: bottom;
         border-radius: 3px;
@@ -64,7 +64,7 @@
         }
 
         &:hover {
-            color: $color-secondary-dark;
+            color: $color-secondary-light;
             cursor: pointer;
         }
     }
